@@ -30,6 +30,7 @@ Benoit Moussaud
 Bernd Dutkowski
 Brad Clark
 Brant Langer Gurganus
+Brian Curnow
 Brian Deitte
 Brian Felder
 Bruce Atherton
