@@ -147,6 +147,10 @@
   </name>
   <name>
     <first>Brian</first>
+    <last>Curnow</last>
+  </name>
+  <name>
+    <first>Brian</first>
     <last>Deitte</last>
   </name>
   <name>
